use Java8 for easier backports, create fscript-shell to ease version agnostic mod development